--- a/week16/carousel.css
+++ b/week16/carousel.css
@@ -11,6 +11,6 @@
   height: 100%;
   /* 把图像图像扩展至最大尺寸，以使其宽度和高度完全适应内容区域 */
   background-size: contain;
-  transition: ease .3s; 
-  cursor: pointer;
+  /* transition: ease .3s;  */
+  /* cursor: pointer; */
 }
